# tesseract-web

./: .gitignore  Dockerfile  README.md  async_job_input.json  curl_commands.md  mcp_server.py  mcp_tools.py  ocr.py  ocr_engine.py  pyproject.toml  pytest.ini  requirements.txt  sample.json  sample_api_endpoints_documentation.md  test_async.py
static/: main.css  main.js
templates/: index.html
tests/: test_app.py  test_e2e.py  test_file_cleanup.py  test_mcp.py  test_mcp_sse.py  test_optional_ocr_data.py  test_optional_ocr_data_ui.py  test_split_timing.py  test_timing.py  test_ui.py
